--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
@@ -844,22 +844,22 @@
             <table>
                 <tr>
                     <td class="td_content" colspan="2">
-                        <span class="span_green">看用户发帖记录</span><br />
+                        <span class="span_green">1、看用户发帖记录</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;在详情页，点击联系人后面的名称，可以查看用户在网站的发帖纪录，如果该用户在短时间内发布了多处不同房源，基本可以判定为中介。<br />
-                        <span class="span_green">看电话  </span><br />
+                        <span class="span_green">2、看电话</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;标题、图片、内容、小区名称中带有与联系方式中不同的电话号码，特别是用空格、符号、谐音等各种方式隐藏真实电话号码的，90%为中介。结合搜索引擎中搜到的该电话信息判断，如搜到该电话在其他网站发布的不同房源信息，经纪人网上店铺等，可以判定为中介。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;鉴别方法：<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;a.通过搜索引擎查看发帖人的联系方式。是否发布了多处不同房源。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;b.查看发帖人的网上店铺<br />
-                        <span class="span_green">看标题</span><br />
+                        <span class="span_green">3、看标题</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;一般房东写的标题较为简单，而经纪人帖子可能会写的比较吸引人，如好房不等人、稀缺房源、性价比高、精品推荐、免费看房等等。<br />
-                        <span class="span_green">看房屋介绍</span><br />
+                        <span class="span_green">4、看房屋介绍</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;描述简单，内容泛泛的多为经纪人，房东的的信息一般会写的比较详细，具体的行车路线，房源的突出特点等。<br />
-                        <span class="span_green">看价格</span><br />
+                        <span class="span_green">5、看价格</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;价格过低可能为虚假房源，有些经纪人发布一些地段好，价格便宜的房源吸引人，当有人表示对此房有意向时，却开始推荐其他房源；另外，也有些黑中介发布低价格的房源吸引客户，收取看房费。如何识别黑中介？<br />
-                        <span class="span_green">看付款方式</span><br />
+                        <span class="span_green">6、看付款方式</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;同意月付或押一付一，基本上都是房东。<br />
-                        <span class="span_green">打电话询问</span><br />
+                        <span class="span_green">7、打电话询问</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;打电话时，可以通过询问房屋的详细信息与发布的信息是否一致来判断，也可以直接询问对方是否为经纪人。<br />
                     </td>
                 </tr>
@@ -893,17 +893,17 @@
             <table>
                 <tr>
                     <td class="td_content" colspan="2">
-                        <span class="span_green">收费没有凭证</span><br />
+                        <span class="span_green">1、收费没有凭证</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;正规公司都可以出具盖有公司法定公章的收据或发票，如果不开，这个费用的收取就没有得到相关管理单位的认可。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;《城市房地产中介服务管理》规定：<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;第十八条 房地产中介服务费用由房地产中介服务机构统一收取，房地产中介服务机构收取费用应当开具发票，依法纳税。<br />
-                        <span class="span_green">虚假房源</span><br />
+                        <span class="span_green">2、虚假房源</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;黑中介发布质优价廉的房源，吸引看房人，随后推辞该房屋已经租出，带您看别的房子，乘机强收看房费、信息费。<br />
-                        <span class="span_green">收押金</span><br />
+                        <span class="span_green">3、收押金</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;黑中介在客户找房时声称有合适的房子，随后让对方交“押金”。当客户要求陪同看房时，他们通常会推托房东有事不能来，或带客户看一些烂房子。如此一拖再拖，“赚”押金。<br />
-                        <span class="span_green">假房东</span><br />
+                        <span class="span_green">4、假房东</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;先租到房子，后冒充房东转租，从此失踪。<br />
-                        <span class="span_green">免佣金</span><br />
+                        <span class="span_green">5、免佣金</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;宣称不收佣金，背后提高房租，吃巨额差价。<br />
                     </td>
                 </tr>
@@ -914,13 +914,13 @@
             <table>
                 <tr>
                     <td class="td_content" colspan="2">
-                        <span class="span_green">明确询问此套房源是否存在</span><br />
+                        <span class="span_green">1、明确询问此套房源是否存在</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;有些经纪人发布一些地段好，价格便宜的房源吸引人，当有人表示对此房有意向时，却推辞该房子已出租或者以别的借口向租房者推荐其他房源。为避免双方时间浪费，联系时最好直接询问对方此房源是否存在，或者明确表明自己的租房条件。<br />
-                        <span class="span_green">谨防没有房产证的房源</span><br />
+                        <span class="span_green">2、谨防没有房产证的房源</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;一些人冒充房东行骗，将租来快到期的房屋转租，或者将只短租几天的房源再出租，从中牟利。产权证是建立租赁关系的第一条件，要使租赁关系合理合法，出租人还要持房产所有证件到房地产管理部门办理房屋租赁证件，只有获得了租赁证，出租手续才完备。 所以租房者要认真核实房东的房产证或经纪人的代理合同。<br />
-                        <span class="span_green">避免低价陷阱</span><br />
+                        <span class="span_green">3、避免低价陷阱</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;有些经纪人打着“免佣金”的幌子吸引顾客，等顾客看到满意的房子后又以免收佣金为理由提高租金，赚取租金差额。租房者可以在最开始询问经纪人：交易过程中需要交纳的费用和确定的租金；租房前，首先确认房屋安全，不能只图便宜，一定要认真检查房子是否存在安全隐患，是否为隔断间等等。现在很多房子被改造成小间出租，租房时最好对房内设施检查仔细，如门窗是否正常，下水管道是否畅通，有无漏水，电路布置是否危险等。交纳租金前，勿忘试用各种开关、水、电、煤气等，以免入住后出现不必要的麻烦。<br />
-                        <span class="span_green">明确房子日后维护和退还押金问题</span><br />
+                        <span class="span_green">4、明确房子日后维护和退还押金问题</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;租房者租赁房子后不仅有使用房子的权利，还有维护房内各种设备设施的义务，因此在签订合同之前要和房东或者经纪人确认房内的设备设施当前状态，并将其附在合同附件中，以免以后发生纠纷。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;租房者在签合同之前也要将房东或经纪人收取的费用及需要向相关部门交纳的费用了解清楚，最好在合同后附《费用清单》详细计算相关收费。例如：房租是否包取暖费，房内电表、水表入住时的度数，以后缴费的方式。在这个过程中，也要谨防经纪人除租金外收取其他费用。例如房间内没有有线电视，经纪人却要代房东收取已交的有线费用等。一般在第一次缴纳租金时，都要交一定比例的押金。此时需要和房东或经纪人确认押金返还时间和返还额度，为了避免恶意扣除押金，可能扣除的部分都可以通过《费用清单》确认清楚。<br />
                     </td>
@@ -932,21 +932,62 @@
             <table>
                 <tr>
                     <td class="td_content" colspan="2">
-                        <span class="span_green">查看双方证件</span><br />
+                        <span class="span_green">1、查看双方证件</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;A．房主查看房客身份证，(可向公安局确认身份证)，并索取复印件做为合同附件；<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;B. 房客查看房主产权证明(可向当地产交易所进行确认) ，房主身份证(可向公安局确认身份证) 及两证的统一(即产权证的产权人与身份证相同) ，并索取复印件做为合同附件，有些只有使用权的老公房，则要看房东的公房租赁证和身份证是否相符；<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;合同签字(房主方)与产权证的产权人如果不相同需有产权人的代理委托书，即如果通过经纪人找房，需要查看对方的代理委托书。<br />
-                        <span class="span_green">确认所有费用</span><br />
+                        <span class="span_green">2、确认所有费用</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;签订房屋租赁合同之前，查看水、气、电、电话费、物业费等是否已结清，询问这些费用是否包括在房租内，如果不包括，是每个月定额，还是按照实际使用的费用由承租人一方负担，如何缴纳等；<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;签订合同之前，还要跟房东或者经纪人确认房内的设备设施当前的状态，折旧和损坏是否计入扣除押金的费用，并将其附在合同附件中。<br />
-                        <span class="span_green">确认合同</span><br />
+                        <span class="span_green">3、确认合同</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;签订租赁合同时要仔细阅读合同条款，对于模糊内容要详加询问，并落实于纸质租房合同，交押金需要收据，确认扣除押金的的约定情况，退房时需凭收据拿回押金。<br />
-                        <span class="span_green">明确违约责任</span><br />
+                        <span class="span_green">4、明确违约责任</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;违约情况如：出租人逾期交付房屋，租期结束承租人逾期退租等，可以每日按高于租金标准收取违约金；若出租人擅自收回房屋，或者承租人擅自退租，可约定一次性承担较高的违约金，也可以约定支付未使用租期的租金作为违约金。<br />
-                        <span class="span_green">入住之前</span><br />
+                        <span class="span_green">5、入住之前</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;a.为了安全起见，入住之前最好跟邻居了解下房源之前的租住情况，要求房东或经纪人换锁<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;b.跟房东或经纪人确认交房租的时间，以免因晚交房租而产生滞纳金<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;c.检查门窗，试用各种开关、水、电、煤气等<br />
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_6">5_6.二手房买卖注意事项</div>
+        <div class="div_body_nav_text">
+            <table>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        <span class="span_green">1、核查房屋手续是否齐全</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;房产证是证明房主对房屋享有所有权的惟一凭证，没有房产证的房屋交易时对买受人来说有得不到房屋的极大风险。房主可能有房产证而将其抵押或转卖，即使现在没有将来办理取得后，房主还可以抵押和转卖。所以最好选择有房产证的房屋进行交易。<br />
+                        <span class="span_green">2、核实产权是否清晰</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;有些房屋有好多个共有人，如有继承人共有的、有家庭共有的、还有夫妻共有的，对此买受人应当和全部共有人签订房屋买卖合同。如果只是部分共有人擅自处分共有财产，买受人与其签订的买卖合同未在其他共有人同意的情况下一般是无效的。所以卖方必须是房屋的所有人，通过查验产权证和产权人身份证核实，确认无误即可。<br />
+                        <span class="span_green">3、询问交易房屋是否在租</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;有些二手房在转让时，存在物上负担，即还被别人租赁。如果买受人只看房产证，只注重过户手续，而不注意是否存在租赁时，买受人极有可能得到一个不能及时入住的或使用的房产。因为我国包括大部分国家均认可“买卖不破租赁”，也就是说房屋买卖合同不能对抗在先成立的租赁合同。这一点在实际中被很多买受人及中介公司忽视，也被许多出卖人利用从而引起较多纠纷。<br />
+                        <span class="span_green">4、土地情况是否清晰</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;二手房中买受人应注意土地的使用性质，看是划拨还是出让，划拨的土地一般是无偿使用，政府可无偿收回，出让是房主已缴纳了土地出让金，买受人对房屋享有较完整的权利;还应注意土地的使用年限，如果一个房屋的土地使用权仅有40年，房主已使用十来年，对于买受人来说是否还应该按同地段土地使用权为70年商品房的价格来衡量时，就有点不划算。<br />
+                        <span class="span_green">5、关注房龄情况</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;很多二手房经过炒房团的买卖，房本都是近几年的。再加上经纪人谈到房龄时模棱两可，二手房的真实房龄就需要买房人多加留意了。可以通过询问和观察周边环境大概估算出房龄。<br />
+                        <span class="span_green">6、了解市政规划是否影响</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;有些房主出售二手房可能是已了解该房屋在5到10年左右要面临拆迁，或者房屋附近要建高层住宅，可能影响采光、价格等市政规划情况，才急于出售，作为买受人在购买时应全面了解详细情况。<br />
+                        <span class="span_green">7、确保房屋性质合法</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;房改房、安居工程、经济适用房本身是一种福利性质的政策性住房，在转让时有一定限制，而且这些房屋在土地性质、房屋所有权范围上有一定的国家规定，买受人购买时要避免买卖合同与国家法律冲突。<br />
+                        <span class="span_green">8、单位房屋侵权问题</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;一般单位的房屋有成本价的职工住房，还有标准价的职工住房，二者土地性质均为划拨，转让时应缴纳土地使用费。再者，对于标准价的住房一般单位享有部分产权，职工在转让时，单位享有优先购买权。买受人如果没有注意这些可能会和房主一起侵犯单位的合法权益。<br />
+                        <span class="span_green">9、核实房屋状况</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;在看房的时候从以下几个方面入手了解： 房屋建筑状况、房屋小区状况、房屋权利情况。这些情况的核实，有利于控制好交易的实际成本和风险。<br />
+                        <span class="span_green">10、多方面询问房源详细情况</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;房东或者经纪人在介绍房源的时候，会尽量让买主选择性知道房屋的真实情况。例如对面的空地是建菜场还是建单位，房屋内发生过的事情等等。在购买二手房之前，可以多向小区物业和居民打听情况。<br />
+                        <span class="span_green">11、明确交易程序</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;二手房交易可分为看房、签约、按合同约定明确时间给首付款、过户、交房、给余款几大步骤。这几个步骤需要注意：保留好交易的证据、过户是一定要房产证上所有人都到场才可以过户。<br />
+                        <span class="span_green">12、物管费用是否拖欠</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;有些房主在转让房屋时，其物业管理费，电费以及三气(天然气、暖气、煤气)费用长期拖欠，且已欠下数目不小的费用，买受人不知情购买了此房屋，所有费用买受人有可能要全部承担。所以在交房时要查看清楚对方是否缴纳清了物业费、水电煤气费等一切费用。<br />
+                        <span class="span_green">13、明确违约责任</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;和卖方要明确严格的违约责任，是双方诚信履行二手房买卖合同的保障。<br />
+                        <span class="span_green">14、避免中介违规行为</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;有些中介公司违规提供中介服务，如在二手房贷款时，为买受人提供零首付的服务，即买受人所支付的全部购房款均可从银行骗贷出来。买受人以为自己占了便宜，岂不知如果被银行发现，所有的责任有可能自己都要承担。<br />
+                        <span class="span_green">15、 避免在买房决定过程中抬高房价</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;如今在房价不断上涨的背景下，经纪人在买房者有购买意向后，可能会突然涨价，并给买房人制造多人看房供不应求的氛围。这时候，买房者需冷静，因为很可能在放弃后，这套房源的价格又回落到最初的报价。<br />
+                        <span class="span_green">16、检查合同约定是否明确</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;二手房的买卖合同虽然不需像商品房买卖合同那么全面，但对于一些细节问题还应约定清楚，如：合同主体、权利保证、房屋价款、交易方式、违约责任、纠纷解决、签订日期等等问题均应全面考虑。避免不必要的纠纷。<br />
                     </td>
                 </tr>
             </table>
