--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
@@ -73,6 +73,13 @@
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="5_7"><span class="span_body_nav_inner childnode">5_7.二手房买卖流程</span></span>
             </div>
+            <div class="div_body_nav_inner">
+                <span class="span_body_nav" id="6"><span class="span_body_nav_inner_first">6、火车票防骗指南</span></span>
+            </div>
+            <div class="div_body_nav_inner">
+                <span class="span_body_nav" id="6_1"><span class="span_body_nav_inner childnode">6_1.常见火车票骗子骗人手法  </span></span>
+                <span class="span_body_nav" id="6_2"><span class="span_body_nav_inner childnode">6_2.教你如何识别票的真伪  </span></span>
+            </div>
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_1">1.拼车防骗指南</div>
         <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_1_1">1_1.拼车注意事项</div>
@@ -988,6 +995,60 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;如今在房价不断上涨的背景下，经纪人在买房者有购买意向后，可能会突然涨价，并给买房人制造多人看房供不应求的氛围。这时候，买房者需冷静，因为很可能在放弃后，这套房源的价格又回落到最初的报价。<br />
                         <span class="span_green">16、检查合同约定是否明确</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;二手房的买卖合同虽然不需像商品房买卖合同那么全面，但对于一些细节问题还应约定清楚，如：合同主体、权利保证、房屋价款、交易方式、违约责任、纠纷解决、签订日期等等问题均应全面考虑。避免不必要的纠纷。<br />
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_5_7">5_7.二手房买卖流程</div>
+        <div class="div_body_nav_text">
+            <table>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        &nbsp;&nbsp;&nbsp;&nbsp;1、买卖双方建立信息沟通渠道，买方了解房屋整体现状及产权状况，要求卖方提供合法的证件，包括房屋所有权证书、身份证件及其它证件。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;2、如卖方提供的房屋合法，可以上市交易，买方可以交纳购房定金(交纳购房定金不是商品房买卖的必经程序)，买卖双方签订房屋买卖合同(或称房屋买卖契约)。买卖双方通过协商，对房屋坐落位置、产权状况及成交价格、房屋交付时间、房屋交付、产权办理等达成一致意见后，双方签订至少一式三份的房屋买卖合同。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;3、买卖双方共同向房地产交易管理部门提出申请，接受审查。买卖双方向房地产管理部门提出申请手续后，管理部门要查验有关证件，审查产权，对符合上市条件的房屋准予办理过户手续，对无产权或部分产权又未得到其他产权共有人书面同意的情况拒绝申请，禁止上市交易。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;4、立契。房地产交易管理部门根据交易房屋的产权状况和购买对象，按交易部门事先设定的审批权限逐级申报审核批准后，交易双方才能办理立契手续。现在北京市已取消了交易过程中的房地产卖契，即大家所俗称的“白契”。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;5、缴纳税费。税费的构成比较复杂，要根据交易房屋的性质而定。比如房改房、危改回迁房、经济适用房与其它商品房的税费构成是不一样的。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;6、办理产权转移过户手续。交易双方在房地产交易管理部门办理完产权变更登记后，交易材料移送到发证部门，买方凭领取房屋所有权证通知单到发证部门申领新的产权证。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;7、对贷款的买受人来说在与卖方签订完房屋买卖合同后由买卖双方共同到贷款银行办理贷款手续，银行审核买方的资信，对双方欲交易的房屋进行评估，以确定买方的贷款额度，然后批准买方的贷款，待双方完成产权登记变更，买方领取房屋所有权证后，银行将贷款一次性发放。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;8、买方领取房屋所有权证、付清所有房款，卖方交付房屋并结清所有物业费后双方的二手房屋买卖合同全部履行完毕。<br />
+                        <span class="span_esfbllc"></span>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="div_body_nav_title" id="div_body_nav_title_6">6.火车票防骗指南</div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_6_1">6_1.常见火车票骗子骗人手法</div>
+        <div class="div_body_nav_text">
+            <table>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        <span class="span_green">步步为营法</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;直接说先汇款较容易被识穿，很多狡猾的骗子不会一开始就这么说的。一开始他们会说当面交易，叫你去火车站或其他公共场所交易，但却久久不现身，让你等得性急之后，再说一大堆理由，如“怕你是公安警察”“要你表示一下诚意”等，然后叫你汇一点订金，汇了订金后手机就永远关机了，或者更黑心的骗子还叫你不停的增加订金，直到你醒悟过来.....<br />
+                        <span class="span_green">高科技法</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;骗子说可以当面验票或一起去找车站人员验票，但验完票必须立刻付款，因此叫你们一人去验票，朋友在银行里面准备汇款，骗子等你到火车站之后，会打电话给你朋友，这时你朋友手机中显示的来电是你的手机号码的（因为骗子可以通过软件修改来电显示的号码），叫你朋友汇款，还可能会通过技术手段让你的电话永远忙音打不进来，你朋友因为联系不上你，也就汇款了。<br />
+                        <span class="span_green">内部票法</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;骗子说是火车站内部预留票，甚至你和他通完话之后，他还会打一个来电显示是车站内部办公电话的电话给你（当然，这来电显示也是假的），说不方便外出，叫你汇款后再叫快递公司快递火车票给你，还可能会说因为没和快递公司合作，所以不能让快递公司送票上门再收款、现在火车票紧张等等....总之，就要叫你要先汇款，当然，汇款后，你是肯定等不到火车票上门的。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;总之一句话：先验票，再付款，需要您提前付款的行为，一定是骗子！<br />
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_6_2">6_2.教你如何识别票的真伪</div>
+        <div class="div_body_nav_text">
+            <table>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        <span class="span_green">假票“放大”看:</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;用放大镜细看票面的数字部分，如发现某些数字与其他数字字迹不相同，或有涂改过的痕迹，就极有可能是假票；如果金额小数点后面仅有一个数字“0”，那一定是假票；票面被挖补处因在制假过程中被刮去一部分纤维，所以在阳光直射下略有些发白；此外，用放大镜或在灯光照射下如果票面上的车站名、票价、车次等处有裂缝，也多半是假票。以上方法较适合于识别“挖补假票”。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;现在微机打印的 “软纸车票”，采用的是特制纸张，不仅质地柔韧，表面光滑，而且票面的水波纹线细密，字迹清晰，票面干净，逆光看有水印，若仔细辨认或稍作转换角度即可见“中国铁路”、“CR”等防伪隐形文字及字符，同时车票上印有条形码。<br />
+                        <span class="span_green">整版的假票用手摸:</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;首先可以通过手感识别：真票纸质较好，手感平顺、光滑，假票纸质厚薄不一，手感粗糙。同时，真票票面油墨在充足光线的照射下有柔和的光泽，且能看到防伪水印。假票票面“中国铁路”标志以及背面的水印较为模糊，且手轻揉票面及数字时，油墨会沾在手上。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;那些挖补过的车票，可通过逆光照看和手摸来鉴别，这种假票的制造者，往往是将假票上需要的站名、价格等字体，整个地从其他书、报或废票上挖下来粘贴上去，因此该字体与整个票面颜色不统一，与票面字样不一致，只要用手指轻摸票面，便会有凸出感。涂改后的假票字迹模糊，用手指触摸会有墨迹较易识别。自行印制的假票，一般纸质较差，有的客票正面底纹斜线模糊、中断，字迹不规整、不清楚。<br />
+                        <span class="span_green">通过手机拍摄二维码进行验证</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;Quick拍二维码解码软件，可以到官网quickpai.mobi下载，也可以到各大应用商店搜索下载Quick拍。可以通过此软件进行真假验证。<br />
+                        <span class="span_hcpyp"></span>
                     </td>
                 </tr>
             </table>
