--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -170,11 +170,11 @@
                 <tr class="tr_left_box_bottom">
                     <td class="td_left_box_bottom_left">预约/评价/开店：</td>
                     <td class="td_left_box_bottom_right">
-                        <span class="span_left_box_bottom_right">预约评价买家使用指南</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yypjbuy">预约评价买家使用指南</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">预约评价卖家使用指南</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_yypjsell">预约评价卖家使用指南</span>
                         <em class="em_left_box_bottom_right"></em>
-                        <span class="span_left_box_bottom_right">评价申诉</span>
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_pjss">评价申诉</span>
                     </td>
                 </tr>
             </table>
