--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    Layout = null;
+    ViewBag.Title = "BZZX_LXKF";
+    Layout = "~/Areas/Business/Views/Shared/_ListLayout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -8,9 +9,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
+    <link href="@Url.Content("~/Areas/Business/Css/BZZX/BZZX_LXKF.css")" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/BZZX/BZZX_LXKF.js")"></script>
 </head>
 <body>
-    <div>
+    <div class="div_body">
     
     </div>
 </body>
