--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YYPJKD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YYPJKD.cshtml
@@ -246,12 +246,12 @@
                     <td class="td_content" colspan="2">
                         &nbsp;&nbsp;&nbsp;&nbsp;为了保证预约数与评价数的公正性，防止商家之间恶意竞争，我们开发了防作弊系统来维护市场秩序。以下是情况会被判定为无效<br />
                         <span class="span_bold">无效预约判定条件</span><br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;（1）同一账号短时间多次预约 <br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;（2）预约时间有一定规律性<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;（3）商家被投诉，58核实后，确认预约量无效<br />
+                        （1）同一账号短时间多次预约 <br />
+                        （2）预约时间有一定规律性<br />
+                        （3）商家被投诉，信息小镇核实后，确认预约量无效<br />
                         <span class="span_bold">无效评价判定条件</span><br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;（1）评价中出现敏感词
-                        &nbsp;&nbsp;&nbsp;&nbsp;（2）评价带有有广告性质
+                        （1）评价中出现敏感词<br />
+                        （2）评价带有有广告性质<br />
                         <span class="span_bold">处理</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;被判定为无效的预约/评价，页面中不会显示但后台会记录<br />
                     </td>
@@ -271,8 +271,8 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;（2）预约时间有一定规律性<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;（3）商家被投诉，信息小镇核实后，确认预约量无效<br />
                         <span class="span_bold">无效评价判定条件</span><br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;（1）评价中出现敏感词
-                        &nbsp;&nbsp;&nbsp;&nbsp;（2）评价带有有广告性质
+                        &nbsp;&nbsp;&nbsp;&nbsp;（1）评价中出现敏感词<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;（2）评价带有有广告性质<br />
                         <span class="span_bold">处理</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;被判定为无效的预约/评价，页面中不会显示但后台会记录<br />
                     </td>
@@ -328,14 +328,14 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;2、商家可登陆个人中心，点击右上角的待回复评论进入评价处理页面，进行回复或者评价申诉。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;3、登录信息小镇，点击消息---我的评价，查看收到的最新评价，点击评价内容进行回复。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;4、评价申诉流程：<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;1）登陆卖家账户，进入个人中心---评价管理，点击右上角"遇到恶意差评怎么办"<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;2）进入在线申诉页面---点击页面下方"我要申诉"，填写以下内容：<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;a）订单号：差评对应的订单号码，可在卖家交易---订单管理中查看<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;b）申诉原因：勾选需要申诉的评价所属的原因类型。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;c）情况说明：勾选是否与买家取得联系、达成服务意向、提供服务等选项。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;d）详细理由：描述从买家预约到服务完成并收到评价的事情经过，指出评价内容中与事实不相符的描述，以及其他删除评价的理由。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;e）上传凭证：凭证内容包括但不限于收据、合同、短信记录、帮帮记录、现场照片等，凭证内容为申诉说明提供论据，且凭证材料需一次性提交充足，<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;不接受后续补充。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1）登陆卖家账户，进入个人中心---评价管理，点击右上角"遇到恶意差评怎么办"<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2）进入在线申诉页面---点击页面下方"我要申诉"，填写以下内容：<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a）订单号：差评对应的订单号码，可在卖家交易---订单管理中查看<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;b）申诉原因：勾选需要申诉的评价所属的原因类型。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;c）情况说明：勾选是否与买家取得联系、达成服务意向、提供服务等选项。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;d）详细理由：描述从买家预约到服务完成并收到评价的事情经过，指出评价内容中与事实不相符的描述，以及其他删除评价的理由。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;e）上传凭证：凭证内容包括但不限于收据、合同、短信记录、帮帮记录、现场照片等，凭证内容为申诉说明提供论据，且凭证材料需一次性提交<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;充足，不接受后续补充。<br />
                     </td>
                 </tr>
             </table>
