--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -14,7 +14,61 @@
 </head>
 <body>
     <div class="div_body">
-    
+        <div class="div_content">
+            <span class="span_step span_step_first"></span>
+            <span class="span_step_text">请选择问题类型: </span>
+        </div>
+        <div class="div_content" style="height:320px;">
+            <div class="div_wtlx">
+                <table class="table_wtlx">
+                    <tr class="tr_wtlx">
+                        <td class="td_wtlx_inner_left">信息问题</td>
+                        <td class="td_wtlx_inner_right">
+                            <span class="span_wtlx_inner_right">信息被删除</span>
+                            <span class="span_wtlx_inner_right">信息被返回修改</span>
+                            <span class="span_wtlx_inner_right">信息被判分类不当</span>
+                            <span class="span_wtlx_inner_right">信息不显示/无法刷新</span>
+                        </td>
+                    </tr>
+                    <tr class="tr_wtlx">
+                        <td class="td_wtlx_inner_left"></td>
+                        <td class="td_wtlx_inner_right">
+                            <span class="span_wtlx_inner_right">投诉举报虚假信息</span>
+                            <span class="span_wtlx_inner_right">冒用手机号码</span>
+                            <span class="span_wtlx_inner_right">其它信息冒用</span>
+                            <span class="span_wtlx_inner_right">申诉被投诉</span>
+                        </td>
+                    </tr>
+                    <tr class="tr_wtlx">
+                        <td class="td_wtlx_inner_left">账户问题</td>
+                        <td class="td_wtlx_inner_right">
+                            <span class="span_wtlx_inner_right">账户被冻结</span>
+                            <span class="span_wtlx_inner_right">被判为房产中介</span>
+                            <span class="span_wtlx_inner_right">被判为二手商家</span>
+                            <span class="span_wtlx_inner_right">被判为职介</span>
+                        </td>
+                    </tr>
+                    <tr class="tr_wtlx">
+                        <td class="td_wtlx_inner_left"></td>
+                        <td class="td_wtlx_inner_right">
+                            <span class="span_wtlx_inner_right">跟换认证</span>
+                            <span class="span_wtlx_inner_right">找回密码</span>
+                            <span class="span_wtlx_inner_right">账户被盗</span>
+                            <span class="span_wtlx_inner_right">充值问题</span>
+                        </td>
+                    </tr>
+                    <tr class="tr_wtlx">
+                        <td class="td_wtlx_inner_left">合作及其他</td>
+                        <td class="td_wtlx_inner_right">
+                            <span class="span_wtlx_inner_right">合作咨询</span>
+                            <span class="span_wtlx_inner_right">在线增值</span>
+                            <span class="span_wtlx_inner_right">系统问题</span>
+                            <span class="span_wtlx_inner_right">团购、二手等</span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
 </body>
 </html>
