--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
@@ -1,6 +1,85 @@
 ﻿.div_body {
     width: 100%;
-    height: 800px;
+    height: 600px;
     display: block;
-    border: 1px solid #ccc;
+    border: 1px solid #DEDEDE;
+    margin-top: 20px;
+    background-color: #FBFBFB;
 }
+
+.div_content {
+    width: 100%;
+    height: 80px;
+    display: block;
+    padding: 20px 40px;
+}
+
+.span_step_text {
+    font-size: 16px;
+    font-weight: 700;
+    height: 30px;
+    vertical-align: top;
+    margin-top: 2px;
+    margin-left: 10px;
+    display: inline-block;
+}
+
+.span_step_first {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-image: url(../images/one-blue.png);
+}
+
+.span_step_second {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-image: url(../images/two-blue.png);
+}
+
+.div_wtlx {
+    width: 800px;
+    height: 100%;
+    background-color: #fff;
+    display: block;
+    border: 1px solid #DEDEDE;
+    margin-left: 60px;
+}
+
+.table_wtlx {
+    width: 100%;
+    height: 100%;
+}
+
+.tr_wtlx {
+    height: 30px;
+    width: 100%;
+}
+
+.td_wtlx_inner_left {
+    font-weight: 700;
+    width: 100px;
+}
+
+.td_wtlx_inner_right {
+    width: 700px;
+}
+
+.span_wtlx_inner_right {
+    width: 157px;
+    height: 35px;
+    display: inline-block;
+    float: left;
+    background-color: #eBeBeB;
+    cursor: pointer;
+    padding-top: 6px;
+    margin-right: 10px;
+    margin-top: 4px;
+}
+
+    .span_wtlx_inner_right:hover {
+        background-color: #ff6a00;
+        color: #fff;
+        font-weight: 700;
+    }
