--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX.cshtml
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="div_body">
-        <iframe id="iframeright" style="border: none; width: 100%; height: 100%"></iframe>
+        <iframe class="iframe" id="iframeright"></iframe>
     </div>
 </body>
 </html>
