--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -16,7 +16,7 @@
     <div class="div_body">
         <div class="div_content" style="margin-top:20px;">
             <span class="span_step span_step_first"></span>
-            <span class="span_step_text">请选择问题类型: </span>
+            <span class="span_step_text">请选择问题类型：</span>
         </div>
         <div class="div_content div_content_wtlx">
             <div class="div_wtlx">
@@ -71,7 +71,21 @@
         </div>
         <div class="div_content" style="margin-top:20px;">
             <span class="span_step span_step_second"></span>
-            <span class="span_step_text">请选择具体问题: </span>
+            <span class="span_step_text">具体问题解决：</span>
+        </div>
+        <div class="div_content div_content_wtlx">
+            <div class="div_wtlx">
+                <div id="div_xxbsc">
+                    <table class="table_wtjj">
+                        <tr class="tr_wtjj">
+                            <td class="td_wtjj_inner_left">请输入您的信息编号：</td>
+                            <td class="td_wtjj_inner_right">
+                                <input type="text" /><input type="button" value="查看被删除原因" />
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </body>
