--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -73,14 +73,15 @@
             <span class="span_step span_step_second"></span>
             <span class="span_step_text">具体问题解决：</span>
         </div>
-        <div class="div_content div_content_wtlx">
-            <div class="div_wtlx">
+        <div class="div_content div_content_wtjj">
+            <div class="div_wtjj">
                 <div id="div_xxbsc">
                     <table class="table_wtjj">
                         <tr class="tr_wtjj">
                             <td class="td_wtjj_inner_left">请输入您的信息编号：</td>
                             <td class="td_wtjj_inner_right">
-                                <input type="text" /><input type="button" value="查看被删除原因" />
+                                <input type="text" id="inputXSJ" class="input_content" placeholder="请输入信息编号">
+                                <input class="btn btn-info" id="btnHQXSJYZM" type="button" style="margin-top: -3px; width: 123px;" value="查看被删除原因" />
                             </td>
                         </tr>
                     </table>
