--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/HBSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/HBSJ.cshtml
@@ -51,7 +51,7 @@
                 <tr>
                     <td>
                         <input type="text" id="inputXSJ" class="input_content" style="width: 270px;cursor:text;" placeholder="请输入新手机号">
-                        <input class="btn btn-info" id="btnHQXSJYZM" type="button" style="margin-top: -3px; width: 116px;" id="btnHQYZM" value="获取验证码" />
+                        <input class="btn btn-info" id="btnHQXSJYZM" type="button" style="margin-top: -3px; width: 116px;" value="获取验证码" />
                     </td>
                     <td class="Info" id="XSJInfo" style="width: 50%"></td>
                 </tr>
