--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
@@ -47,9 +47,14 @@
 .div_wtlx {
     width: 770px;
     height: 100%;
-    background-color: #fff;
     display: block;
-    border: 1px solid #DEDEDE;
+    margin-left: 60px;
+}
+
+.div_wtjj {
+    width: 770px;
+    height: 100%;
+    display: block;
     margin-left: 60px;
 }
 
@@ -83,12 +88,6 @@
     margin-right: 10px;
 }
 
-    .span_wtlx_inner_right:hover {
-        background-color: #ff6a00;
-        color: #fff;
-        font-weight: 700;
-    }
-
 .table_wtjj {
     width: 100%;
     height: 100%;
@@ -108,4 +107,19 @@
 .td_wtjj_inner_right {
     width: 620px;
     text-align: left;
+}
+
+.input_content {
+    width: 270px;
+    cursor: default;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 34px;
+    padding: 4px 12px;
+    display: inline-block;
+    cursor: text;
+}
+
+:-ms-input-placeholder.input_content {
+    color: #999;
 }
