--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -80,8 +80,15 @@
                         <tr class="tr_wtjj">
                             <td class="td_wtjj_inner_left">请输入您的信息编号：</td>
                             <td class="td_wtjj_inner_right">
-                                <input type="text" id="inputXSJ" class="input_content" placeholder="请输入信息编号">
-                                <input class="btn btn-info" id="btnHQXSJYZM" type="button" style="margin-top: -3px; width: 123px;" value="查看被删除原因" />
+                                <input type="text" id="inputXXBH" class="input_content">
+                                <input class="btn btn-info" id="btnCKBSCYY" type="button" style="margin-top: -3px; width: 123px;" value="查看被删除原因" />
+                                <span class="span_ckxxbh">如何查看信息编号?</span>
+                            </td>
+                        </tr>
+                        <tr class="tr_wtjj">
+                            <td class="td_wtjj_inner_left"></td>
+                            <td class="td_wtjj_inner_right">
+                                <span id="XXBHInfo" style="padding-left:12px;"></span>
                             </td>
                         </tr>
                     </table>
