--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -87,8 +87,8 @@
                         </tr>
                         <tr class="tr_wtjj">
                             <td class="td_wtjj_inner_left"></td>
-                            <td class="td_wtjj_inner_right">
-                                <span id="XXBHInfo" style="padding-left:12px;"></span>
+                            <td class="td_wtjj_inner_right" id="td_xxbhinfo">
+                                
                             </td>
                         </tr>
                     </table>
