--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
@@ -49,6 +49,8 @@
     height: 100%;
     display: block;
     margin-left: 60px;
+    background-color: #fff;
+    border: 1px solid #DEDEDE;
 }
 
 .div_wtjj {
@@ -137,3 +139,10 @@
     .span_ckxxbh:hover {
         color: #ff6a00;
     }
+
+.div_bscyy {
+    width: 500px;
+    height: 200px;
+    background-color: #fff;
+    border: 1px solid #DEDEDE;
+}
