--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -71,14 +71,14 @@
         </div>
         <div class="div_content" style="margin-top:20px;">
             <span class="span_step span_step_second"></span>
-            <span class="span_step_text">具体问题解决：</span>
+            <span class="span_step_text">请描述您遇到的问题：</span>
         </div>
         <div class="div_content div_content_wtjj">
             <div class="div_wtjj">
-                <div id="div_xxbsc">
+                <div class="div_wtjj_inner" id="div_xxbsc" style="display:none">
                     <table class="table_wtjj">
                         <tr class="tr_wtjj">
-                            <td class="td_wtjj_inner_left">请输入您的信息编号：</td>
+                            <td class="td_wtjj_inner_left">信息编号：</td>
                             <td class="td_wtjj_inner_right">
                                 <input type="text" id="inputXXBH" class="input_content">
                                 <input class="btn btn-info" id="btnCKBSCYY" type="button" style="margin-top: -3px; width: 123px;" value="查看被删除原因" />
@@ -87,13 +87,37 @@
                         </tr>
                         <tr class="tr_wtjj">
                             <td class="td_wtjj_inner_left"></td>
-                            <td class="td_wtjj_inner_right" id="td_xxbhinfo">
-                                
+                            <td class="td_wtjj_inner_right" id="td_xxbhinfo"></td>
+                        </tr>
+                        <tr class="tr_wtjj">
+                            <td class="td_wtjj_inner_left"></td>
+                            <td class="td_wtjj_inner_right"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="div_wtjj_inner" id="div_xxbfhxg">
+                    <table class="table_wtjj">
+                        <tr class="tr_wtjj">
+                            <td class="td_wtjj_inner_left">信息编号：</td>
+                            <td class="td_wtjj_inner_right">
+                                <input type="text" id="inputXXBFHXG_XXBH" class="input_content">
+                                <span class="span_ckxxbh">如何查看信息编号?</span>
+                                <span class="span_xxbhinfo"></span>
+                            </td>
+                        </tr>
+                        <tr class="tr_wtjj">
+                            <td></td>
+                            <td class="td_wtjj_inner_right">
+                                <textarea class="textarea_bscyy"></textarea>
                             </td>
                         </tr>
                     </table>
                 </div>
             </div>
+        </div>
+        <div class="div_content div_content_tjkf" id="div_content_tjkf" style="margin-top:20px; display:none">
+            <span class="span_step span_step_third"></span>
+            <span class="span_step_text">描述具体问题提交至客服:（*为必填信息）</span>
         </div>
     </div>
 </body>
